--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": ">=7.2.0",
         "yiisoft/yii2": "~2.0.32",
         "yiisoft/yii2-bootstrap": "~2.0.0",
+        "yiisoft/yii2-imagine": "~2.2.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "himiklab/yii2-recaptcha-widget": "*",
         "mohorev/yii2-upload-behavior": "*",
